2013-02-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/netflow/nf_live_view.php: fixed load filter from the
	group all.
	
	Fixes: #3606272

2013-02-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_events.php,
	images/status_sets/default/severity_informational.png,
	images/status_sets/default/severity_maintenance_pixel.png,
	images/status_sets/default/severity_maintenance.png,
	images/status_sets/default/severity_informational_pixel.png: fixed
	the colors for maintenance and informational events.
	
	Fixes: #3606227

2013-02-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/admin_access_logs.php: cleaned source code style.
	
	* include/functions_db.php: fixed the set ip in the function
	"db_pandora_audit".
	
	Fixes: #3606276

2013-02-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/events/events.php: fixed the javascript to use the
	actual jquery methods for to check all checkboxes.
	
	Fixes: #3606229

2013-02-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/gis_maps/configure_gis_map.php, include/functions_gis.php,
	operation/gis_maps/render_view.php: fixes for the layers.
	
	MERGED FROM THE BRANCH PANDORA_4

2013-02-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	operation/agentes/estado_generalagente.php: Improve the
	forced title in images and the agent operation view

2013-02-28 Dario Rodriguez <dario@artica.es>

	* include/functions_api.php: Added new API function to
	create custom field and to get custom field ID by name.

2013-02-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/gis_maps/render_view.php: fixed the mysql error
	messages when have a "none" for group in a layer.
	
	MERGED FROM THE BRANCH PANDORA_4

2013-02-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/modules/manage_network_components_form.php,
	include/functions_html.php, operation/menu.php,
	operation/events/events_list.php: improved source code.
	